[project]
name = "building-an-mcp-server"
version = "0.1.0"
description = "Hands on Labs: Building MCP Server"

requires-python = ">=3.13"

dependencies = [
    "dotenv>=0.9.9",
    "fastmcp==2.13.0.2",
    "httpx>=0.28.1",
    "mcp[cli]>=1.20.0",
]

[project.scripts]
mcp-coroot = "coroot_mcp_server:main"
mcp-calc = "calculator_mcp_server:main"

